--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class=" js  -webkit-">
 <head>
+<META NAME="robots" CONTENT="noindex">
 <link rel="shortcut icon" href="./images/Logo_Lifetym-20131222-favicon.ico" >
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 <META NAME="Description" CONTENT="The 404 quirky page of Lifetym!">
@@ -44,7 +45,7 @@ img{
     margin-right: auto;
     padding-top: 50px;
     padding-bottom: 100px;
-} 
+}
 </style>
 </head>
 <body>
