--- a/redirect.html
+++ b/redirect.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<META NAME="robots" CONTENT="noindex">
 <meta http-equiv="refresh" content="0; url=http://www.fundamine.com/" />
 </head>
 <body>
