--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ a{
 }
 .profiledescription p{
     margin-top: 20px;
+    font-weight: 300;
 }
 .profilesocial{
     margin-top: 60px;
@@ -83,8 +84,8 @@ a{
     </div>
     <div class="profiledescription">
         <p>Hi! I am Tarkeshwar Singh, Co-Founder of <a href="https://www.fundamine.com">FundaMine</a>. Don't worry about the pronunciation of my name, just call me Tarak instead.</p>
-        <p>I am a Bangalore based entrepreneur cum product manager. I have been building things since my sophomore year in college. I started from the sales and picked up hacking and UX skills later. These days I can complete a full blown web project alone in a couple of weeks.</p>
-        <p>I love talking, thinking and working on things that seem like 'the next big thing'. Drop me a line with your next big idea and you might land yourself a great product person, a moderate hacker and designer :)
+        <p>I am a Bangalore based entrepreneur cum product manager. I have been building things since my sophomore year in college. I started from sales & marketing and picked up hacking and UX skills later. These days I can complete a full web project in a couple of weeks.</p>
+        <p>I love talking, thinking and working on things that seem like 'the next big thing'. Drop me a <a href="mailto:tarkeshwarrpsingh@gmail.com">line</a> with your next big idea and land yourself a great product person! :)</p>
     </div>
     <div class="profilesocial">
         <span><a href="https://twitter.com/trollkeswar"><img src="./images/twitter.png" alt="Twitter"></a></span>
