--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ a{
     <div class="profiledescription">
         <p>Hi! I am Tarkeshwar Singh, Co-Founder of <a href="https://www.fundamine.com">FundaMine</a>. Don't worry about the pronunciation of my name, just call me Tarak instead.</p>
         <p>I am a Bangalore based entrepreneur cum product manager. I have been building things since my sophomore year in college. I am a salesman turned product person & hacker. <a href="https://www.fundamine.com">FundaMine</a> was the last thing I hacked.</p>
-        <p>I love talking, thinking and working on things that seem like 'the next big thing'. Drop me a <a href="mailto:tarkeshwarrpsingh@gmail.com">line</a> on your next big idea and land yourself a great product person :) These days a lot of my time is spent studying about blockchain applications, fintech products, machine learning and data analytics.</p>
+        <p>I love talking, thinking and working on things that seem like 'the next big thing'. These days a lot of my time is spent studying about blockchain applications, fintech products, machine learning and data analytics. Drop me a <a href="mailto:tarkeshwarrpsingh@gmail.com">line</a> on your next big idea and land yourself a great product person :) </p>
     </div>
     <div class="profilesocial">
         <span><a href="https://twitter.com/trollkeswar"><img src="./images/twitter.png" alt="Twitter"></a></span>
