Added another profile pic

--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,8 @@ ga('send', 'pageview');
 body{
     font-family: 'Source Sans Pro';
     background-color: #fff;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 .profileheader{
     margin-top:60px;
@@ -57,6 +59,7 @@ a{
 }
 .profiledescription p{
     margin-top: 20px;
+    font-weight: 300;
 }
 .profilesocial{
     margin-top: 60px;
@@ -74,7 +77,7 @@ a{
 </head>
 <body>
     <div class="profileheader" style="">
-        <img src="./images/profilepic.png">
+        <img src="./images/profilepic2.png">
     </div>
     <div class="profilequicklinks">
         <span><a href="./projects">Recent Projects</a></span>
@@ -83,8 +86,8 @@ a{
     </div>
     <div class="profiledescription">
         <p>Hi! I am Tarkeshwar Singh, Co-Founder of <a href="https://www.fundamine.com">FundaMine</a>. Don't worry about the pronunciation of my name, just call me Tarak instead.</p>
-        <p>I am a Bangalore based entrepreneur cum product manager. I have been building things since my sophomore year in college. I started from the sales and picked up hacking and UX skills later. These days I can complete a full blown web project alone in a couple of weeks.</p>
-        <p>I love talking, thinking and working on things that seem like 'the next big thing'. Drop me a line with your next big idea and you might land yourself a great product person, a moderate hacker and designer :)
+        <p>I am a Bangalore based entrepreneur cum product manager. I have been building things since my sophomore year in college. I am a biz-dev guy turned product person & hacker. <a href="https://www.fundamine.com">FundaMine</a> was the last thing I hacked.</p>
+        <p>I love talking, thinking and working on things that seem like 'the next big thing'. These days a lot of my time is spent studying blockchain applications, fintech products, machine learning and data analytics. Drop me a <a href="mailto:tarkeshwarrpsingh@gmail.com">line</a> on your next big idea and land yourself a great product person :) </p>
     </div>
     <div class="profilesocial">
         <span><a href="https://twitter.com/trollkeswar"><img src="./images/twitter.png" alt="Twitter"></a></span>
