--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ a{
 </head>
 <body>
     <div class="profileheader" style="">
-        <img src="./images/profilepic.png">
+        <a href="./"><img src="./images/profilepic.png"></a>
     </div>
     <div class="profilequicklinks">
         <span><a href="./projects">Recent Projects</a></span>
