Projects page completed

--- a/index.html
+++ b/index.html
@@ -20,11 +20,19 @@ ga('create', 'UA-46391576-3', 'auto');
 ga('send', 'pageview');
 </script>
 <style type="text/css">
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
+article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
+ol,ul{list-style:none;margin:0;padding:0;}
+blockquote,q{quotes:none;}
+blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}
+table{border-collapse:collapse;border-spacing:0;}
+/* start editing from here */
 body{
     font-family: 'Source Sans Pro';
     background-color: #fff;
     padding-left: 15px;
     padding-right: 15px;
+    padding-bottom: 50px;
 }
 .profileheader{
     margin-top:60px;
@@ -80,7 +88,7 @@ a{
         <a href="./"><img src="./images/profilepic.png"></a>
     </div>
     <div class="profilequicklinks">
-        <span><a href="./projects">Recent Projects</a></span>
+        <span><a href="./projects.html">Recent Projects</a></span>
         <span><a href="./images/tarak_resume.pdf">Resume</a></span>
         <span><a href="mailto:tarkeshwarrpsingh@gmail.com">Say hello!</a></span>
     </div>
