--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ a{
         <p>I love talking, thinking and working on things that seem like 'the next big thing'. These days a lot of my time is spent studying blockchain applications, fintech products, machine learning and data analytics. Drop me a <a href="mailto:tarkeshwarrpsingh@gmail.com">line</a> on your next big idea and land yourself a great product person :) </p>
     </div>
     <div class="profilesocial">
-        <span><a href="https://twitter.com/trollkeswar"><img src="./images/twitter.png" alt="Twitter"></a></span>
+        <span><a href="https://twitter.com/trollkeshwar"><img src="./images/twitter.png" alt="Twitter"></a></span>
         <span><a href="https://in.linkedin.com/in/tarkeshwarsingh"><img src="./images/linkedin.png" alt="Linkedin"></a></span>
         <span><a href="https://medium.com/@trollkeshwar"><img src="./images/medium.png" alt="Linkedin"></a></span>
     </div>
