--- a/projects.html
+++ b/projects.html
@@ -212,7 +212,7 @@ a{
         </div>
     </div>
     <div class="profilesocial">
-        <span><a href="https://twitter.com/trollkeswar"><img src="./images/twitter.png" alt="Twitter"></a></span>
+        <span><a href="https://twitter.com/trollkeshwar"><img src="./images/twitter.png" alt="Twitter"></a></span>
         <span><a href="https://in.linkedin.com/in/tarkeshwarsingh"><img src="./images/linkedin.png" alt="Linkedin"></a></span>
         <span><a href="https://medium.com/@trollkeshwar"><img src="./images/medium.png" alt="Linkedin"></a></span>
     </div>
