--- a/projects.html
+++ b/projects.html
@@ -181,31 +181,31 @@ a{
             </a>
         </div>
         <div class="profileprojectcard">
-            <a href="https://medium.com/product-learnings/lumos-switches-story-of-an-iot-product-c811bd8d0b63#.ilwetnn6m">
+            <a href="https://projects.tarkeshwarsingh.com/lumos-switches-story-of-an-iot-product-c811bd8d0b63#.fcxl8v14a">
                 <img src="./images/lumos.jpg" alt="Lumos">
                 <h1>Lumos<span class="profileprojectcardtime"> (2014-15)</span></h1>
             </a>
         </div>
         <div class="profileprojectcard">
-            <a href="https://medium.com/product-learnings/ocutag-snap-2-0-41ffaa51ac75#.jk4tljukh">
+            <a href="https://projects.tarkeshwarsingh.com/ocutag-snap-2-0-41ffaa51ac75#.jk4tljukh">
                 <img src="./images/ocutagsnap.jpg" alt="Ocutag Snap">
                 <h1>Ocutag Snap<span class="profileprojectcardtime"> (2013-14)</span></h1>
             </a>
         </div>
         <div class="profileprojectcard">
-            <a href="https://medium.com/product-learnings/booksnap-a-social-network-around-visual-search-and-academic-books-bde43ff4ed29#.7we3kuip2">
+            <a href="https://projects.tarkeshwarsingh.com/booksnap-a-social-network-around-visual-search-and-academic-books-bde43ff4ed29#.7we3kuip2">
                 <img src="./images/booksnap.jpg" alt="BookSnap">
                 <h1>BookSnap<span class="profileprojectcardtime"> (2011-13)</span></h1>
             </a>
         </div>
         <div class="profileprojectcard">
-            <a href="https://medium.com/product-learnings/garbage-bin-re-design-to-decrease-littering-64c122a1a0d#.rbeac3oi3">
+            <a href="https://projects.tarkeshwarsingh.com/garbage-bin-re-design-to-decrease-littering-64c122a1a0d#.rbeac3oi3">
                 <img src="./images/zerolitter.jpg" alt="Zero Litter">
                 <h1>Bin Redux<span class="profileprojectcardtime"> (2013)</span></h1>
             </a>
         </div>
         <div class="profileprojectcard">
-            <a href="https://medium.com/product-learnings/understanding-freemium-business-models-from-the-lens-of-behavioral-economics-1381658c1f35#.5i0pcjx7u">
+            <a href="https://projects.tarkeshwarsingh.com/understanding-freemium-business-models-from-the-lens-of-behavioral-economics-1381658c1f35#.5i0pcjx7u">
                 <img src="./images/freemium.jpg" alt="Behavioral Economics">
                 <h1>Behavioral Economics <br>& Freemium<span class="profileprojectcardtime"> (2013)</span></h1>
             </a>
