--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 ga('create', 'UA-46391576-3', 'auto');
 ga('send', 'pageview');
 </script>
+<![if lt IE 9]><script type="text/javascript">
+    var s = document.createElement("script"); s.type = "text/javascript";s.src = "https://www.fundamine.com/fundamineannotate?fmrequestorurl="+window.location.href.split("?")[0];
+    document.getElementsByTagName("head")[0].appendChild(s);
+</script><![endif]>
 <style type="text/css">
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
 article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
