--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta property="og:title" content="Tarkeshwar's portfolio of products he has worked on"/>
 <meta property="og:description" content="Tarak's portfolio website where he talks about the products he has built and the learnings he has had."/>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta property="og:image" content="http://tarkeshwarsingh.com/images/ogimage.jpeg">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,400italic,300italic,600,600italic' rel='stylesheet' type='text/css'>
 <!-- Google Analytics-->
