--- a/sharepage.html
+++ b/sharepage.html
@@ -240,7 +240,7 @@ body{
             }
         }
     }
-    if(getCookie("HLShareURL")==encodeURIComponent(window.location.href)){
+    if(getCookie("HLShareURL")==window.location.href){
         document.getElementById("pdflink").style.display="block";
     }
     else{
