--- a/test.html
+++ b/test.html
@@ -27,6 +27,9 @@ body{
     padding-right: 15px;
     padding-bottom: 50px;
 }
+a{
+    text-decoration: none;
+}
 .topNavContainer{
     width: 100%;
     position: fixed;
@@ -264,20 +267,28 @@ body{
         Free Formula books
     </h1>
     <div class="contentIcons">
-        <img src="./images/math.png">
-        <span>Maths Formula Book</span>
+        <a href="./sharepage.html">
+            <img src="./images/math.png">
+            <span>Maths Formula Book</span>
+        </a>
     </div>
     <div class="contentIcons">
-        <img src="./images/physics.png">
-        <span>Physics Formula Book</span>
+        <a href="./sharepage.html">
+            <img src="./images/physics.png">
+            <span>Physics Formula Book</span>
+        </a>
     </div>
     <div class="contentIcons">
-        <img src="./images/chemistry.png">
-        <span>Chemistry Formula Book</span>
+        <a href="./sharepage.html">
+            <img src="./images/chemistry.png">
+            <span>Chemistry Formula Book</span>
+        </a>
     </div>
     <div class="contentIcons">
-        <img src="./images/biology.png">
-        <span>Biology Formula Book</span>
+        <a href="./sharepage.html">
+            <img src="./images/biology.png">
+            <span>Biology Formula Book</span>
+        </a>
     </div>
     <div class="divider"></div>
 </div>
