--- a/test.html
+++ b/test.html
@@ -172,6 +172,28 @@ a{
     margin-top: 20px;
 }
 
+.whatappicon{
+    display: inline-block;
+    margin: 70px 70px;
+}
+.whatappicon img{
+    max-width: 140px;
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
+.whatappicon span{
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 20px;
+    font-weight: 300;
+    color:#414141;
+}
+
 @media only screen and (max-width: 728px) {
     .navInput{
         display: none;
@@ -291,6 +313,19 @@ a{
         </a>
     </div>
     <div class="divider"></div>
+	
+	<div class="formulaBooks" id="pcmbformulabooks">
+    <h1 class="titleTopBar">
+        Free Daily JEE Questions
+    </h1>
+    <div class="whatappicon">
+		<a href="./whatsapp.html">
+			<img src="./images/whatsapp.png">
+			<span>On WhatsApp</span>
+		</a>
+	</div>
+</div>
+
 </div>
 </div>
 </body>
