--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@ a{
     margin-top: 40px;
     margin-left:auto;
     margin-right:auto;
-    max-width: 600px;
+    max-width: 700px;
     font-size: 18px;
     line-height: 28px;
+    color: #414141;
 }
 .profiledescription p{
     margin-top: 20px;
@@ -98,9 +99,13 @@ a{
         <span><a href="mailto:tarkeshwarrpsingh@gmail.com">Say hello!</a></span>
     </div>
     <div class="profiledescription">
-        <p>Hi! I am Tarkeshwar Singh, Co-Founder of <a href="https://www.fundamine.com">FundaMine</a>. Don't worry about the pronunciation of my name, just call me Tarak instead.</p>
-        <p>I am a Bangalore based entrepreneur cum product manager. I have been building things since my junior year in college. I am a biz-dev guy turned product person & hacker. <a href="https://www.fundamine.com">FundaMine</a> was the last thing I hacked.</p>
-        <p>I love talking, thinking and working on things that seem like 'the next big thing'. These days a lot of my time is spent studying about different fintech products and little bit of machine learning. Drop me a <a href="mailto:tarkeshwarrpsingh@gmail.com">line</a> on your next big idea and land yourself a great product person :) </p>
+        <p>Hi! I am Tarkeshwar, a product manager based out of Bangalore, India. I'm currently the Product & Growth Lead at a startup called <a href="http://www.hashlearn.com">HashLearn</a>.</p>
+        <p>Before this, I built <a href="https://www.fundamine.com">FundaMine</a>. FundaMine tried to bring inline-comments/annotations to the entire web by making the adoption as easy as integrating Google Analytics.</p>
+        <p>I also love to get my hands dirty with new technologies, since that helps me get a sense of the latest possibilities. I love talking about new products and ideas. Send me a hello <a href="mailto:tarkeshwarrpsingh@gmail.com">here</a> if you want to talk about one.</p>
+        <!-- <p>
+        Product blogs & books that I really like:
+        
+        </p> -->
     </div>
 
     <div class="profilesocial">
