--- a/projects.html
+++ b/projects.html
@@ -175,9 +175,15 @@ a{
     </div>
     <div class="profileprojectlist">
         <div class="profileprojectcard">
+            <a href="https://www.hashlearn.com">
+                <img src="./images/hashlearn.jpg" alt="HashLearn">
+                <h1>HashLearn<span class="profileprojectcardtime"> (2016-2016)</span></h1>
+            </a>
+        </div>
+        <div class="profileprojectcard">
             <a href="https://www.fundamine.com">
                 <img src="./images/fundamine.jpg" alt="FundaMine">
-                <h1>FundaMine<span class="profileprojectcardtime"> (2015-now)</span></h1>
+                <h1>FundaMine<span class="profileprojectcardtime"> (2015-2016)</span></h1>
             </a>
         </div>
         <div class="profileprojectcard">
