--- a/projects.html
+++ b/projects.html
@@ -175,45 +175,45 @@ a{
     </div>
     <div class="profileprojectlist">
         <div class="profileprojectcard">
-            <a href="https://www.hashlearn.com">
+            <a href="https://projects.tarkeshwarsingh.com/learnings-of-a-pm-at-an-early-stage-startup-8de8d698c543#.4qt2uycdp">
                 <img src="./images/hashlearn.jpg" alt="HashLearn">
-                <h1>HashLearn<span class="profileprojectcardtime"> (2016-2016)</span></h1>
+                <h1>HashLearn<span class="profileprojectcardtime"><br>(May-Dec'2016)</span></h1>
             </a>
         </div>
         <div class="profileprojectcard">
             <a href="https://www.fundamine.com">
                 <img src="./images/fundamine.jpg" alt="FundaMine">
-                <h1>FundaMine<span class="profileprojectcardtime"> (2015-2016)</span></h1>
+                <h1>FundaMine<span class="profileprojectcardtime"><br>(April'2015-March'2016)</span></h1>
             </a>
         </div>
         <div class="profileprojectcard">
             <a href="https://projects.tarkeshwarsingh.com/lumos-switches-story-of-an-iot-product-c811bd8d0b63#.fcxl8v14a">
                 <img src="./images/lumos.jpg" alt="Lumos">
-                <h1>Lumos<span class="profileprojectcardtime"> (2014-15)</span></h1>
+                <h1>Lumos<span class="profileprojectcardtime"><br>(Sep'2014-March'2015)</span></h1>
             </a>
         </div>
         <div class="profileprojectcard">
             <a href="https://projects.tarkeshwarsingh.com/ocutag-snap-2-0-41ffaa51ac75#.jk4tljukh">
                 <img src="./images/ocutagsnap.jpg" alt="Ocutag Snap">
-                <h1>Ocutag Snap<span class="profileprojectcardtime"> (2013-14)</span></h1>
+                <h1>Ocutag Snap<span class="profileprojectcardtime"><br>(June'2013-Sep'2014)</span></h1>
             </a>
         </div>
         <div class="profileprojectcard">
             <a href="https://projects.tarkeshwarsingh.com/booksnap-a-social-network-around-visual-search-and-academic-books-bde43ff4ed29#.7we3kuip2">
                 <img src="./images/booksnap.jpg" alt="BookSnap">
-                <h1>BookSnap<span class="profileprojectcardtime"> (2011-13)</span></h1>
+                <h1>BookSnap <span class="profileprojectcardtime"><br>(May'2011-April'2013)</span></h1>
             </a>
         </div>
         <div class="profileprojectcard">
             <a href="https://projects.tarkeshwarsingh.com/garbage-bin-re-design-to-decrease-littering-64c122a1a0d#.rbeac3oi3">
                 <img src="./images/zerolitter.jpg" alt="Zero Litter">
-                <h1>Bin Redux<span class="profileprojectcardtime"> (2013)</span></h1>
+                <h1>Bin Redux <span class="profileprojectcardtime"><br>(March-April'2013)</span></h1>
             </a>
         </div>
         <div class="profileprojectcard">
             <a href="https://projects.tarkeshwarsingh.com/understanding-freemium-business-models-from-the-lens-of-behavioral-economics-1381658c1f35#.5i0pcjx7u">
                 <img src="./images/freemium.jpg" alt="Behavioral Economics">
-                <h1>Behavioral Economics <br>& Freemium<span class="profileprojectcardtime"> (2013)</span></h1>
+                <h1>Behavioral Economics <br>& Freemium <span class="profileprojectcardtime"><br>(Jan-April'2013)</span></h1>
             </a>
         </div>
     </div>
