--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ a{
         <span><a href="mailto:tarkeshwarrpsingh@gmail.com">Say hello!</a></span>
     </div>
     <div class="profiledescription">
-        <p>Hi! I am Tarkeshwar, a product manager based out of Bangalore, India. I'm currently working as Product Manager in the Customer Experience team at <a href="https://www.freecharge.in/">Freecharge</a>, India's second largest mobile payments startup.</p>
-        <p>Before to this, I worked as a product and growth lead at <a href="https://www.hashlearn.com/">HashLearn</a>, an edtech saas product focussed on connecting students with tutors. During my stint at HashLearn, it grew 5x in about 8 months while key funnels like Install to Signup and Install to First Session improved by over 40%.
+        <p>Hi! I am Tarkeshwar, a product manager based out of Bangalore, India. I'm currently lead the Customer Experience(CRM) & Order Fulfillment(manages order life-cycles) teams at <a href="https://www.swiggy.com/">Swiggy</a>, India's largest food delivery startup.</p>
+        <p>Before this, I worked as a product and growth lead at <a href="https://www.hashlearn.com/">HashLearn</a>, an edtech product focussed on connecting students with tutors. During my stint at HashLearn, it grew 5x in about 8 months while key funnels like Install to Signup and Install to First Session improved by over 40%.
         </p>
         <p>Prior to that, I built <a href="https://www.fundamine.com">FundaMine</a>. FundaMine tried to bring inline-comments/annotations to the entire web by making the adoption as easy as integrating Google Analytics.</p>
         <p>I love reading about the latest things in technology and about human inconsitencies. I like talking about new products and ideas. Send me a hello <a href="mailto:tarkeshwarrpsingh@gmail.com">here</a> if you want to talk about one.</p>
