--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ a{
         <span><a href="mailto:tarkeshwarrpsingh@gmail.com">Say hello!</a></span>
     </div>
     <div class="profiledescription">
-        <p>Hi! I am Tarkeshwar, a product manager based out of Bangalore, India. I currently lead the Customer Experience(CRM) & Order Fulfillment teams at <a href="https://www.swiggy.com/">Swiggy</a>, India's largest food delivery startup. Swiggy's amazing Chat(& ChatBot) and Order Tracking Experience are the consumer facing products I lead. Apart from these, I have built multiple internal products like the Chat CRM, Order Lifecycle Manager and Real Time Alerts on outages/anomalies for the internal Biz/Ops teams.</p>
+        <p>Hi! I am Tarkeshwar, a product manager based out of Bangalore, India. I currently lead the Customer Experience(CRM) & Order Fulfillment teams at <a href="https://www.swiggy.com/">Swiggy</a>, India's largest food delivery startup. Swiggy's amazing Chat(& ChatBot) and Order Tracking Experience are the consumer facing products I lead. Apart from these, I have built multiple internal products like the Chat CRM, Order Lifecycle Manager and Real Time Monitoring & Root Cause Exploration tool for Biz & Ops teams.</p>
         <p>Before this, I worked as a product and growth lead at <a href="https://www.hashlearn.com/">HashLearn</a>, an edtech product focussed on connecting students with tutors. During my stint at HashLearn, it grew 5x in about 8 months while key funnels like Install to Signup and Install to First Session improved by over 40%.
         </p>
         <p>Prior to that, I built <a href="https://www.fundamine.com">FundaMine</a>. FundaMine tried to bring inline-comments/annotations to the entire web by making the adoption as easy as integrating Google Analytics.</p>
