--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ a{
         <p>Before this, I worked as a product and growth lead at <a href="https://www.hashlearn.com/">HashLearn</a>, an edtech product focussed on connecting students with tutors. During my stint at HashLearn, it grew 5x in about 8 months while key funnels like Install to Signup and Install to First Session improved by over 40%.
         </p>
         <p>Prior to that, I built <a href="https://www.fundamine.com">FundaMine</a>. FundaMine tried to bring inline-comments/annotations to the entire web by making the adoption as easy as integrating Google Analytics.</p>
-        <p>I love reading about the latest things in technology and about human inconsitencies. I like talking about new products and ideas. Send me a hello <a href="mailto:tarkeshwarrpsingh@gmail.com">here</a> if you want to talk about one.</p>
+        <p>I love reading about the latest things in technology and behavioral economics. I like talking about new products and ideas. Send me a hello <a href="mailto:tarkeshwarrpsingh@gmail.com">here</a> if you want to talk about anything.</p>
         <!-- <p>
         Product blogs & books that I really like:
         
