--- a/index.html
+++ b/index.html
@@ -10,7 +10,31 @@
 <meta property="og:image" content="http://tarkeshwarsingh.com/images/ogimage.jpeg">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,400italic,300italic,600,600italic' rel='stylesheet' type='text/css'>
-<!-- Google Analytics-->
+<script>
+  window.fcWidget.init({
+    token: "deda4d5d-65ee-4430-afbb-d7f0234993a9",
+    host: "https://wchat.freshchat.com"
+  });
+</script>
+    <script>
+  // Make sure fcWidget.init is included before setting these values
+
+  // To set unique user id in your system when it is available
+  window.fcWidget.setExternalId("john.doe1987");
+
+  // To set user name
+  window.fcWidget.user.setFirstName("John");
+
+  // To set user email
+  window.fcWidget.user.setEmail("john.doe@gmail.com");
+
+  // To set user properties
+  window.fcWidget.user.setProperties({
+    plan: "Estate",                 // meta property 1
+    status: "Active"                // meta property 2
+  });
+</script>
+    <!-- Google Analytics-->
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
