--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <meta property="og:image" content="http://tarkeshwarsingh.com/images/ogimage.jpeg">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,400italic,300italic,600,600italic' rel='stylesheet' type='text/css'>
-<script>
+<script src="https://wchat.freshchat.com/js/widget.js"></script>
+
+  <script>
   window.fcWidget.init({
     token: "deda4d5d-65ee-4430-afbb-d7f0234993a9",
     host: "https://wchat.freshchat.com"
