--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script>
   window.fcWidget.init({
     token: "deda4d5d-65ee-4430-afbb-d7f0234993a9",
-    host: "https://wchat.freshchat.com"
+    host: "http://tarkeshwarsingh.com"
   });
 </script>
     <script>
