--- a/index.html
+++ b/index.html
@@ -115,5 +115,11 @@ a{
         <span><a href="https://in.linkedin.com/in/tarkeshwarsingh"><img src="./images/linkedin.png" alt="Linkedin"></a></span>
         <span><a href="https://medium.com/@trollkeshwar"><img src="./images/medium.png" alt="Linkedin"></a></span>
     </div>
+<script>
+  window.intercomSettings = {
+    app_id: "coklbam8"
+  };
+</script>
+<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/coklbam8';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
 </body>
 </HTML>
